--- a/Resources/Private/Templates/ContentElements/Dynamic/Accordion.html
+++ b/Resources/Private/Templates/ContentElements/Dynamic/Accordion.html
@@ -10,7 +10,6 @@
     <div class="ce-accordion accordion" id="accordion-{data.uid}">
       <f:for each="{records}" as="item" iteration="iteration">
 
-
         <f:if condition="{iteration.cycle} == 1 && {flexform.open_first} == 1">
           <f:then>
             <f:variable name="open">true</f:variable>
@@ -22,12 +21,12 @@
           </f:else>
         </f:if>
 
-        <f:if condition="{flexform.always_open} == 1">
+        <f:if condition="{flexform.always_open} == 0">
           <f:then>
-            <f:variable name="always-open">true</f:variable>
+            <f:variable name="always-open">data-bs-parent="#accordion-{data.uid}"</f:variable>
           </f:then>
           <f:else>
-            <f:variable name="always-open">false</f:variable>
+            <f:variable name="always-open"></f:variable>
           </f:else>
         </f:if>
 
@@ -43,7 +42,8 @@
               arguments="{data: data, item: item, table: 'tx_t3kit_accordion_item', field: 'header', iteration: iteration, open: open }"
             />
           </div>
-          <div id="body-{data.uid}-{iteration.cycle}"class="accordion-collapse {f:if(condition: '{show} == "show"', then: 'show')} collapse " aria-labelledby="#header-{data.uid}-{iteration.cycle}" {f:if(condition: '{always-open} == "true" ', then: '', else: 'data-bs-parent="accordion-{data-uid}"')}">
+
+          <div id="body-{data.uid}-{iteration.cycle}" class="accordion-collapse {show} collapse " aria-labelledby="#header-{data.uid}-{iteration.cycle}" {f:format.raw(value: '{always-open}')}>
 
             <div class="ce-accordion__body-wrp accordion-body flex-column d-flex">
               <f:if condition="{item.images}">
@@ -158,46 +158,41 @@
   <f:switch expression="{item.data.header_layout}">
     <f:case value="1">
       <h1 class="ce-accordion__header header">
-        <button class="accordion-button {item.data.header_style} collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#body-{data.uid}-{iteration.cycle}" aria-expanded="{open}" aria-controls="#body-{data.uid}-{iteration.cycle}">
-          <t3kit:contentEditable table="{table}" field="{field}" uid="{item.data.uid}">{item.data.header}</t3kit:contentEditable>
-        </button>
+        <f:render section="accordionButton" arguments="{_all}" />
       </h1>
     </f:case>
     <f:case value="2">
       <h2 class="ce-accordion__header header">
-        <button class="accordion-button {item.data.header_style} {open} {f:if(condition: '{open} == "false"', then: 'collapsed')}" type="button" data-bs-toggle="collapse" data-bs-target="#body-{data.uid}-{iteration.cycle}" aria-expanded="{open}" aria-controls="#body-{data.uid}-{iteration.cycle}">
-          <t3kit:contentEditable table="{table}" field="{field}" uid="{item.data.uid}">{item.data.header}</t3kit:contentEditable>
-        </button>
+        <f:render section="accordionButton" arguments="{_all}" />
       </h2>
     </f:case>
     <f:case value="3">
       <h3 class="ce-accordion__header header">
-        <button class="accordion-button {item.data.header_style} collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#body-{data.uid}-{iteration.cycle}" aria-expanded="{open}" aria-controls="#body-{data.uid}-{iteration.cycle}">
-          <t3kit:contentEditable table="{table}" field="{field}" uid="{item.data.uid}">{item.data.header}</t3kit:contentEditable>
-        </button>
+        <f:render section="accordionButton" arguments="{_all}" />
       </h3>
     </f:case>
     <f:case value="4">
       <h4 class="ce-accordion__header header">
-        <button class="accordion-button {item.data.header_style} collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#body-{data.uid}-{iteration.cycle}" aria-expanded="{open}" aria-controls="#body-{data.uid}-{iteration.cycle}">
-          <t3kit:contentEditable table="{table}" field="{field}" uid="{item.data.uid}">{item.data.header}</t3kit:contentEditable>
-        </button>
+        <f:render section="accordionButton" arguments="{_all}" />
       </h4>
     </f:case>
     <f:case value="5">
       <h5 class="ce-accordion__header header">
-        <button class="accordion-button {item.data.header_style} collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#body-{data.uid}-{iteration.cycle}" aria-expanded="{open}" aria-controls="#body-{data.uid}-{iteration.cycle}">
-          <t3kit:contentEditable table="{table}" field="{field}" uid="{item.data.uid}">{item.data.header}</t3kit:contentEditable>
-        </button>
+        <f:render section="accordionButton" arguments="{_all}" />
       </h5>
     </f:case>
     <f:case value="6">
       <h6 class="ce-accordion__header header">
-        <button class="accordion-button {item.data.header_style} collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#body-{data.uid}-{iteration.cycle}" aria-expanded="{open}" aria-controls="#body-{data.uid}-{iteration.cycle}">
-          <t3kit:contentEditable table="{table}" field="{field}" uid="{item.data.uid}">{item.data.header}</t3kit:contentEditable>
-        </button>
+        <f:render section="accordionButton" arguments="{_all}" />
       </h6>
     </f:case>
   </f:switch>
+</f:section>
+
+<f:section name="accordionButton">
+  <f:variable name="collapsedClass">{f:if(condition: '{open} == "false"', then: ' collapsed')}</f:variable>
+  <button class="accordion-button {item.data.header_style}{collapsedClass}" type="button" data-bs-toggle="collapse" data-bs-target="#body-{data.uid}-{iteration.cycle}" aria-expanded="{open}" aria-controls="#body-{data.uid}-{iteration.cycle}">
+    <t3kit:contentEditable table="{table}" field="{field}" uid="{item.data.uid}">{item.data.header}</t3kit:contentEditable>
+  </button>
 </f:section>
 </html>
