--- a/Resources/Private/Templates/ContentElements/Dynamic/Slider.html
+++ b/Resources/Private/Templates/ContentElements/Dynamic/Slider.html
@@ -14,13 +14,8 @@
     <f:render partial="Js/{flexform.jsname}" arguments="{_all}" />
   </f:if>
 
-  <f:if condition="{flexform.height} == 0">
-    <f:then>
-      <f:variable name="height">400</f:variable>
-    </f:then>
-    <f:else>
-      <f:variable name="height">{flexform.height}</f:variable>
-    </f:else>
+  <f:if condition="{flexform.height} != 0">
+    <f:variable name="height">{flexform.height}</f:variable>
   </f:if>
 
   <f:if condition="{data.section_container_width} == 'container'">
